fixed issue of over lapping map on mobile when using keyboard

--- a/app/assets/stylesheets/kindergartens/_map.scss
+++ b/app/assets/stylesheets/kindergartens/_map.scss
@@ -1,5 +1,5 @@
 .window {
-  height: 100vh;
+  height: 90vh;
   width: 100vw;
 }
 
@@ -31,6 +31,7 @@
 .search-container-small {
   height: 15%;
   width: 100vw;
+  margin-bottom: 50px;
 
   .search-title {
     padding: 5px;
@@ -50,8 +51,8 @@
 }
 
 #map {
-  width: 75%;
-  height: 100vh;
+  width: 100vw;
+  height: 80vh;
 }
 
 .mapboxgl-popup {
@@ -77,7 +78,7 @@
 @media (max-width: 768px) {
   #map {
     width: 100vw;
-    height: 85%;
+    height: 70%;
   }
   #map.kita-show-map {
     height: 50% !important;
